--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-BeautifulSoup==3.1.0.1
-Django==1.2
+Django==1.3
+Fabric==0.9.0
 PyYAML==3.09
-South==0.7.2
+South==0.7.3
+BeautifulSoup==3.1.0.1
 django-memcached==0.1.2
 feedparser==4.1
 python-memcached==1.45
+simplejson==2.1.2
